feat: Implementación de Endpoit por documento
https://github.com/udistrital/argo_documentacion/issues/275
