# swagger/swagger.json
@@ -90,6 +90,41 @@
         ]
       }
     },
+    "/supervisor/documento": {
+      "get": {
+        "operationId": "SupervisorController_getSupervisorPorDocumento",
+        "parameters": [
+          {
+            "name": "documento",
+            "required": true,
+            "in": "query",
+            "description": "Número de documento del supervisor",
+            "schema": {
+              "example": "123456789",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Contratos del supervisor encontrados exitosamente"
+          },
+          "400": {
+            "description": "Formato de documento inválido"
+          },
+          "404": {
+            "description": "No se encontraron contratos para el documento especificado"
+          },
+          "500": {
+            "description": "Error interno del servidor"
+          }
+        },
+        "summary": "Obtener supervisores por número de documento",
+        "tags": [
+          "Supervisores"
+        ]
+      }
+    },
     "/rol-ordenador": {
       "get": {
         "operationId": "RolOrdenadorController_getOrdenadores",
